Fixed Date font on Mobile devices

--- a/css/calender-main.css
+++ b/css/calender-main.css
@@ -1451,7 +1451,7 @@ A VERTICAL event
 
   .fc .fc-toolbar-title {
     color: black;
-    font-size: 2.5em;
+    font-size: 2em;
     margin: 1 1rem;
   }
 }
